--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
             <div class="card1">
                 <h1>Portfolio</h1>
-                <a target="_blank" href="https://gauravmishra-1404.github.io/amazon-clone/"><img src="./portfolio.jpg"></a>
+                <a target="_blank" href="https://gauravmishra-1404.github.io/Portfolio_website/"><img src="./portfolio.jpg"></a>
             </div>
             <div class="card1">
                 <h1>RESEARCH WORK</h1>
